added 'Reroll!' button and nav bar, UI update
- added 'Reroll!' button to refresh prompt pages
- added top nav bar on each page for easy browsing
- changed spacing and font sizes
- began work on page to add new prompts to database (submit.html)

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,20 +3,27 @@
 
 <head>
 	<meta charset='UTF-8'>
+	<meta name='viewport' content='width=device-width, initial-scale=1' user-scalable='yes'>
 	<title>Promptly: Flesh out your characters!</title>
 	<style>
-		body {padding: 30px}
+		body {padding: 0px 30px}
 		ul {list-style-type: none;}
 		li {white-space: pre-line;
 			font-size: 25px;}
+		h1 {margin-bottom: 0px;}		
+		h2 {margin-top: 0px;
+			font-size: 20px;
+			opacity: 60%;}
 	</style>
 </head>
 
 <body>
-	<img src='/templates/img/logo_small.png' alt='Promptly Logo'>
-	<h1>Promptly</h1>
-	<h2>Flesh out your characters!</h2>
-	<br />
+	<h1>Promptly
+		<h2>Flesh out your characters!</h2>
+	</h1>
+	<hr />
+	<a href='/'>Home</a> | <a href='/one'>Single</a> | <a href='/two'>Two</a> | <a href='/three'>Three</a> |  <a href='/dialogue'>Dialogue</a> |  <a href='/drawing'>Drawing</a> |  <a href='/prose'>Prose</a>
+	<hr />
 	<br />
 	<p>Choose prompt type below:</p>
 	<ul>
@@ -31,6 +38,8 @@
 		<li><a href='/drawing'>Drawing</a></li>
 		<br/>
 		<li><a href='/prose'>Prose</a></li>
+		<br/>
+		<!-- <li><a href='/new_prompt'>Submit new prompt!</a></li> -->
 	</ul>
 
 
